# Lets-go-c_plus_plus

./: .gitignore  README.md  a.out  class.cpp
task3/include/: circle.h  figure.h  point.h
task3/main/: main.cpp
task3/src/: circle.cpp  point.cpp
task3/test/: test.cpp
task_1/: class.h  main.cpp
task_1/task_2/: Hexagon.cpp  Hexagon.h  class.cpp  main.cpp  point_class.cpp  point_class.h
task_2/: Hexagon.h  point_class.cpp
task_3/: CMakeLists.txt
task_3/include/: figure.h
task_3/main/: main.cpp
task_3/src/: circle.cpp
task_4/: CMakeLists.txt  demo.cpp
task_4/app/: demo.cpp
task_4/include/: Queue.h
task_4/src/: Queue.cpp
task_4/tests/: test.cpp
